--- a/HW 2.ipynb
+++ b/HW 2.ipynb
@@ -1649,9 +1649,7 @@
         }
       ],
       "source": [
-        "smf.ols(\"y ~ x\", data=pd.DataFrame({\"x\": x, \"y\": y})).fit(\n",
-        "    disp=False\n",
-        ").summary()"
+        "smf.ols(\"y ~ x\", data=pd.DataFrame({\"x\": x, \"y\": y})).fit(disp=False).summary()"
       ]
     },
     {
@@ -1948,9 +1946,9 @@
         }
       ],
       "source": [
-        "smf.ols(\"y ~ x + np.power(x,2) + np.power(x,3)\", data=pd.DataFrame({\"x\": x, \"y\": y})).fit(\n",
-        "    disp=False\n",
-        ").summary()"
+        "smf.ols(\n",
+        "    \"y ~ x + np.power(x,2) + np.power(x,3)\", data=pd.DataFrame({\"x\": x, \"y\": y})\n",
+        ").fit(disp=False).summary()"
       ]
     },
     {
@@ -2105,9 +2103,10 @@
         }
       ],
       "source": [
-        "smf.ols(\"y ~ x + np.power(x,2) + np.power(x,3) + np.power(x,4)\", data=pd.DataFrame({\"x\": x, \"y\": y})).fit(\n",
-        "    disp=False\n",
-        ").summary()"
+        "smf.ols(\n",
+        "    \"y ~ x + np.power(x,2) + np.power(x,3) + np.power(x,4)\",\n",
+        "    data=pd.DataFrame({\"x\": x, \"y\": y}),\n",
+        ").fit(disp=False).summary()"
       ]
     },
     {
