--- a/HW 2.ipynb
+++ b/HW 2.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 209,
       "id": "646fd649",
       "metadata": {},
       "outputs": [],
@@ -51,6 +51,7 @@
         "    default=(default[\"default\"] == \"Yes\").astype(int),\n",
         "    student=(default[\"student\"] == \"Yes\").astype(int),\n",
         ")\n",
+        "boston = load_data(\"Boston\")\n",
         "sns.set_theme(style=\"darkgrid\")"
       ]
     },
@@ -2114,10 +2115,285 @@
       "id": "bfff21ef",
       "metadata": {},
       "source": [
-        "Yes, the statistical significance results make sense, becuase we see a strong corrilation with the $0$th and $1$st degree terms, which are a part of $\\psi$, and a not statistically significant corrilation with the $2$nd and $3$rd degree polynomials because they not a part of $\\psi$\n",
+        "Yes, the statistical significance results make sense, becuase we see a strong corrilation with the $0$th and $1$st degree terms, which are a part of the known function for $y$, and a not statistically significant corrilation with the $2$nd and $3$rd degree polynomials because they not a part of the know function for $y$. This also agree with the results from the cross-validation tests: that 3rd and 4th degree terms are not helpful / harmful.\n",
         "\n",
         "# Problem 10\n",
         "## Problem 10.a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 224,
+      "id": "c82d5689",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "The mean is: 22.532806324110677"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 224,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "mean = np.mean(boston[\"medv\"])\n",
+        "Markdown(\"The mean is: \" + str(mean))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d41745e0",
+      "metadata": {},
+      "source": [
+        "## Problem 10.b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 227,
+      "id": "d5785781",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "The standard error is: 0.4084569346972866"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 227,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sem = np.std(boston[\"medv\"]) / np.sqrt(np.size(boston[\"medv\"]))\n",
+        "Markdown(\"The standard error is: \" + str(ste))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fb14900b",
+      "metadata": {},
+      "source": [
+        "## Problem 10.c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 220,
+      "id": "31272a32",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "The standard error is: 0.39688532048705005"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 220,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.random.seed(42)\n",
+        "boostrap = [np.mean(np.random.choice(boston[\"medv\"], size=len(boston[\"medv\"]), replace=True)) for i in range(1000)]\n",
+        "Markdown(\"The standard error is: \" + str(np.std(boostrap)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e7be31e0",
+      "metadata": {},
+      "source": [
+        "The boostrapped estimation is nearly identical to the calculated estimation\n",
+        "\n",
+        "## Problem 10.d"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 221,
+      "id": "a1f98b8c",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "Boostrap interval: (21.89533596837945, 23.170207509881426)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 221,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Markdown(\"Boostrap interval: (\" + str(np.percentile(boostrap, 5)) + \", \" + str(np.percentile(boostrap, 95)) + \")\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 228,
+      "id": "45be8f75",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "Standard Error: (21.715892454716105, 23.34972019350525)"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 228,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Markdown(\"Standard Error: (\" + str(mean-2*sem) + \", \" + str(mean+2*sem) + \")\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "be6f975f",
+      "metadata": {},
+      "source": [
+        "These are once again nearly identical\n",
+        "\n",
+        "## Problem 10.e"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 230,
+      "id": "38168558",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/markdown": [
+              "The median is: 21.2"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "execution_count": 230,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Markdown(\"The median is: \" + str(np.median(boston[\"medv\"])))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f86acec3",
+      "metadata": {},
+      "source": [
+        "## Problem 10.f"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 231,
+      "id": "ac433cad",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.3758688468069677"
+            ]
+          },
+          "execution_count": 231,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.std([np.median(np.random.choice(boston[\"medv\"], size=len(boston[\"medv\"]), replace=True)) for i in range(1000)])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4c351ff4",
+      "metadata": {},
+      "source": [
+        "This makes sense given the data: it is around the standard error of the mean.\n",
+        "\n",
+        "## Problem 10.g"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 233,
+      "id": "58888812",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the 10th percentile is: 5.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"the 10th percentile is: \" + str(np.percentile(boston[\"medv\"],0.1)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0337f681",
+      "metadata": {},
+      "source": [
+        "## Problem 10.h"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 234,
+      "id": "434e69ec",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the standard error of the 10th percentile is: 0.4769626719961951\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"the standard error of the 10th percentile is: \" + str(np.std([np.percentile(np.random.choice(boston[\"medv\"], size=len(boston[\"medv\"]), replace=True), 0.1) for i in range(1000)])))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "58ca6409",
+      "metadata": {},
+      "source": [
+        "This passes the sanity check; it is also similar to the sem of the mean and median, and is not very large or small compared to the data."
       ]
     }
   ],
