--- a/HW 2.ipynb
+++ b/HW 2.ipynb
@@ -52,7 +52,7 @@
         "    student=(default[\"student\"] == \"Yes\").astype(int),\n",
         ")\n",
         "boston = load_data(\"Boston\")\n",
-        "sns.set_theme(style=\"darkgrid\")"
+        "sns.set_theme()"
       ]
     },
     {
@@ -583,7 +583,7 @@
         "    weekly_testing_numerical[\"Direction\"],\n",
         ")\n",
         "plt.show()\n",
-        "sns.set_theme(style=\"darkgrid\")"
+        "sns.set_theme()"
       ]
     },
     {
