--- a/final.ipynb
+++ b/final.ipynb
@@ -394,11 +394,11 @@
    "source": [
     "# 1 Treatment effect\n",
     "\n",
-    "To simulate the regulations that prevent data snooping in regulated industries, we will clearly define our tests before observing or analyzing the data. The goal is to determine if the treatment ( $\\text{TxGroup} == \\text{Treatment}$, which will be our preprocessing step ) has an effect on schizophrenia over time, as measured by the PANSS score ( $\\text{PANSS\\_Total}$ ). So, we want to see if there is a change in $\\text{PANSS\\_Total}$ over time, which can be determined by looking for a corrilation between $\\text{VisitDay}$ and $\\text{PANSS\\_Total}$ using a linear regression model:\n",
+    "We will clearly define our tests before observing or analyzing the data to simulate the regulations that prevent data snooping in regulated industries. The goal is to determine if the treatment ( $\\text{TxGroup} == \\text{Treatment}$, which will be our preprocessing step ) has an effect on schizophrenia over time, as measured by the PANSS score ( $\\text{PANSS\\_Total}$ ). So, we want to see if there is a change in $\\text{PANSS\\_Total}$ over time, which can be determined by looking for a corrilation between $\\text{VisitDay}$ and $\\text{PANSS\\_Total}$ using a linear regression model:\n",
     "\n",
     "$$\\text{PANSS\\_Total}=\\hat{\\beta_0}+\\hat{\\beta_1}\\text{VisitDay}$$\n",
     "\n",
-    "Our null hypothosis is that the treatment has no effect, and if see a P-score $<0.05$ for the "
+    "Our null hypothesis is that the treatment has no effect, and we can reject the null hypothesis if and only if we find that $\\hat{\\beta_1}\\neq 0$ with a $p<0.05$."
    ]
   },
   {
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This shows a p-value well below $0.05$ for a nonzero $\\hat{\\beta}_0$, so we reject the null hypothosis and can say that the treatment plan does improve the PANSS score over time. Aditionally, the coefficent $\\hat{\\beta}_1\\approx 0.1134$ indicates that the treatment will decrease the PANSS score by approximatly $0.1134$ every day."
+    "This shows a p-value well below $0.05$ for a nonzero $\\hat{\\beta}_0$, so we reject the null hypothesis and can say that the treatment plan does improve the PANSS score over time. Additionally, the coefficient $\\hat{\\beta}_1\\approx 0.1134$ indicates that the treatment will decrease the PANSS score by approximately $0.1134$ every day."
    ]
   },
   {
@@ -732,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can say with statistical significant that the control treatment is more effective than the new treatment, with a $\\hat{\\beta'}_1\\approx -0.1208$ versus $\\hat{\\beta}_1\\approx -0.1134$, however that does not mean that the new treatment is inneffecitve. For example, if it has other advantages like few side effects or lower cost, preventing the control treatment from being on option, this study showing the efficacy of the new treatment could be critical information. Overall, it is not more effective / an improvment over the control, however **it is effective**."
+    "We can say with statistical significance that the control treatment is more effective than the new treatment, with a $\\hat{\\beta'}_1\\approx -0.1208$ versus $\\hat{\\beta}_1\\approx -0.1134$, however, that does not mean that the new treatment is ineffective. For example, if it has other advantages like few side effects or lower cost, preventing the control treatment from being an option, this study showing the efficacy of the new treatment could be critical information. Overall, it is not more effective / an improvement over the control. However, **it is effective**."
    ]
   }
  ],
