--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -518,11 +518,16 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    Auto[[\"displacement\", \"horsepower\"]], Auto[\"mpg\"], random_state=42\n",
     ")\n",
-    "Markdown(\"The p value is \" + str(f_oneway(\n",
-    "    make_pipeline(StandardScaler(), SVR()).fit(X_train, y_train).predict(X_test)\n",
-    "    - y_test,\n",
-    "    LinearRegression().fit(X_train, y_train).predict(X_test) - y_test,\n",
-    ").pvalue))"
+    "Markdown(\n",
+    "    \"The p value is \"\n",
+    "    + str(\n",
+    "        f_oneway(\n",
+    "            make_pipeline(StandardScaler(), SVR()).fit(X_train, y_train).predict(X_test)\n",
+    "            - y_test,\n",
+    "            LinearRegression().fit(X_train, y_train).predict(X_test) - y_test,\n",
+    "        ).pvalue\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -548,11 +553,16 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    Auto.drop([\"mpg\", \"name\"], axis=1), Auto[\"mpg\"], random_state=42\n",
     ")\n",
-    "Markdown(\"The p value is \" + str(f_oneway(\n",
-    "    make_pipeline(StandardScaler(), SVR()).fit(X_train, y_train).predict(X_test)\n",
-    "    - y_test,\n",
-    "    LinearRegression().fit(X_train, y_train).predict(X_test) - y_test,\n",
-    ").pvalue))"
+    "Markdown(\n",
+    "    \"The p value is \"\n",
+    "    + str(\n",
+    "        f_oneway(\n",
+    "            make_pipeline(StandardScaler(), SVR()).fit(X_train, y_train).predict(X_test)\n",
+    "            - y_test,\n",
+    "            LinearRegression().fit(X_train, y_train).predict(X_test) - y_test,\n",
+    "        ).pvalue\n",
+    "    )\n",
+    ")"
    ]
   },
   {
