--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -842,14 +842,86 @@
     }
    ],
    "source": [
-    "Markdown(\"Test MSE is \" + str(mean_squared_error(BaggingRegressor(random_state=42).fit(X_train,Y_train).predict(X_test), Y_test)))"
+    "Markdown(\n",
+    "    \"Test MSE is \"\n",
+    "    + str(\n",
+    "        mean_squared_error(\n",
+    "            BaggingRegressor(random_state=42).fit(X_train, Y_train).predict(X_test),\n",
+    "            Y_test,\n",
+    "        )\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Problem 4\n"
+    "# Problem 4\n",
+    "\n",
+    "$$\n",
+    "-\\sum_{i=1}^n\\sum_{m=0}^9 y_{im} \\log(f_m(x_i))\n",
+    "$$\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "-\\log\\left(\\prod_{i:y_i=1} p(x_i)\\prod_{i':y_{i'}=0}(1-p(x_{i'}))\\right)&=-\\log\\left(\\prod_{i:y_i=1} p(x_i)\\right)-\\log\\left(\\prod_{i':y_{i'}=0}(1-p(x_{i'}))\\right)\n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "# Problem 5\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\tanh(a)&=\\frac{e^a-e^{-a}}{e^a+e^{-a}} \\\\\n",
+    "&=1+\\frac{e^a-e^{-a}-e^a-e^{-a}}{e^a+e^{-a}} \\\\\n",
+    "&=1-2\\frac{e^{-a}}{e^a+e^{-a}} \\\\\n",
+    "&=1-2\\frac{1}{e^{2a}+1} \\\\\n",
+    "&=1-2\\sigma(-2a) \\\\\n",
+    "\\end{split}\n",
+    "$$\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\sigma(a)=\\frac{1}{2}-\\frac{1}{2}\\tanh(-\\frac{1}{2}a)\n",
+    "\\end{split}\n",
+    "$$\n",
+    "Working our way backwards, let's looks at $a_k^{(2s)}$\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_k^{(2s)}&=w_{k0}^{(2s)}+\\sum_{j=1}^M w_{kj}^{(2s)}\\sigma\\left(a_j^{(1s)}\\right) \\\\\n",
+    "&=w_{k0}^{(2s)}+\\sum_{j=1}^M w_{kj}^{(2s)}\\left(\\frac{1}{2}-\\frac{1}{2}\\tanh\\left(-\\frac{1}{2}a_j^{(1s)}\\right)\\right) \\\\\n",
+    "&=w_{k0}^{(2s)}+\\frac{1}{2}\\sum_{j=1}^M w_{kj}^{(2s)}+\\sum_{j=1}^M -\\frac{1}{2}w_{kj}^{(2s)}\\tanh\\left(-\\frac{1}{2}a_j^{(1s)}\\right)\n",
+    "\\end{split}\n",
+    "$$\n",
+    "Now let's say that $w_{k0}^{(2t)}=w_{k0}^{(2s)}+\\frac{1}{2}\\sum_{j=1}^M w_{kj}^{(2s)}$, $w_{kj}^{(2t)}=-\\frac{1}{2}w_{kj}^{(2s)}$, and $a_j^{(1t)}=-\\frac{1}{2}a_j^{(1s)}$ then\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_k^{(2s)}&=w_{k0}^{(2s)}+\\frac{1}{2}\\sum_{j=1}^M w_{kj}^{(2s)}+\\sum_{j=1}^M -\\frac{1}{2}w_{kj}^{(2s)}\\tanh\\left(-\\frac{1}{2}a_j^{(1s)}\\right) \\\\\n",
+    "&=w_{k0}^{(2t)}+\\sum_{j=1}^M w_{kj}^{(2t)}\\tanh\\left(a_j^{(1t)}\\right)\n",
+    "\\end{split}\n",
+    "$$\n",
+    "Now we need to show $w^{(1t)}$ such that $a_j^{(1t)}=-\\frac{1}{2}a_j^{(1s)}$.\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "-\\frac{1}{2}a_j^{(1s)}&=-\\frac{1}{2}\\left(w_{j0}^{(1s)}+\\sum_{i=1}^p w_{ji}^{(1s)}x_i\\right) \\\\\n",
+    "&=-\\frac{1}{2}w_{j0}^{(1s)}+\\sum_{i=1}^p -\\frac{1}{2}w_{ji}^{(1s)}x_i\n",
+    "\\end{split}\n",
+    "$$\n",
+    "If we have $w_{j0}^{(1t)}=-\\frac{1}{2}w_{j0}^{(1s)}$ and $w_{ji}^{(1t)}=-\\frac{1}{2}w_{ji}^{(1s)}$ then\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "-\\frac{1}{2}a_j^{(1s)}&=-\\frac{1}{2}w_{j0}^{(1s)}+\\sum_{i=1}^p -\\frac{1}{2}w_{ji}^{(1s)}x_i \\\\\n",
+    "&=w_{j0}^{(1t)}+\\sum_{i=1}^p w_{ji}^{(1t)}x_i \\\\\n",
+    "&=a_j^{(1t)}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "Therefore, we have $a_k^{(2t)}=a_k^{(2t)}$ if\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "w_{k0}^{(2t)}&=w_{k0}^{(2s)}+\\frac{1}{2}\\sum_{j=1}^M w_{kj}^{(2s)} \\\\\n",
+    "w_{kj}^{(2t)}&=-\\frac{1}{2}w_{kj}^{(2s)} \\\\\n",
+    "w_{j0}^{(1t)}&=-\\frac{1}{2}w_{j0}^{(1s)} \\\\\n",
+    "w_{ji}^{(1t)}&=-\\frac{1}{2}w_{ji}^{(1s)}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   }
  ],
